--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,28 @@
 server:
   port: 8080
-
+# http://localhost:8080/login/oauth2/code/google - should be the redirect URL in Google Cloud Console and same should be mentioned below in spring:security:oauth2:client:registration:google:redirect-uri: "{baseUrl}/login/oauth2/code/google" . baseUrl will be http:8080//
+# and keep the Authorized JavaScript origins empty
 spring:
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${GOOGLE_CLIENT_ID}
+            client-secret: ${GOOGLE_CLIENT_SECRET}
+            redirect-uri: "{baseUrl}/login/oauth2/code/google"
+            scope:
+              - openid
+              - profile
+              - email
+        provider:
+          google:
+            authorization-uri: https://accounts.google.com/o/oauth2/v2/auth
+            token-uri: https://oauth2.googleapis.com/token
+            user-info-uri: https://www.googleapis.com/oauth2/v3/userinfo
   output:
     ansi:
       enabled: ALWAYS
