--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,13 +1,17 @@
 server:
   port: 8080
+
 # http://localhost:8080/login/oauth2/code/google - should be the redirect URL in Google Cloud Console
-# and same should be mentioned below in spring:security:oauth2:client:registration:google:redirect-uri: "{baseUrl}/login/oauth2/code/google" . baseUrl will be http:8080//
+# and same should be mentioned below in spring:security:oauth2:client:registration:google:redirect-uri: "{baseUrl}/login/oauth2/code/google"
+# baseUrl will be http://localhost:8080/
 # and keep the Authorized JavaScript origins empty
 # /login/oauth2/code/google should be there as it is returned by Google
+
 spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+
   security:
     oauth2:
       client:
@@ -20,16 +24,30 @@ spring:
               - openid
               - profile
               - email
+          github:
+            client-id: ${GITHUB_CLIENT_ID}
+            client-secret: ${GITHUB_CLIENT_SECRET}
+            redirect-uri: "{baseUrl}/login/oauth2/code/github"
+            scope:
+              - user:email
+            client-name: GitHub
         provider:
           google:
             authorization-uri: https://accounts.google.com/o/oauth2/v2/auth
             token-uri: https://oauth2.googleapis.com/token
             user-info-uri: https://www.googleapis.com/oauth2/v3/userinfo
+          github:
+            authorization-uri: https://github.com/login/oauth/authorize
+            token-uri: https://github.com/login/oauth/access_token
+            user-info-uri: https://api.github.com/user
+            user-name-attribute: login
+
   output:
     ansi:
       enabled: ALWAYS
-#  profiles:
-#    active: dev   # Change to 'prod' when deploying to production
+
+  #  profiles:
+  #    active: dev   # Change to 'prod' when deploying to production
 
   jpa:
     hibernate:
